@@ -1,3 +1,13 @@
+2019-10-22  Alex Christensen  <achristensen@webkit.org>
+
+        Revert r243010 on pre-Catalina macOS
+        https://bugs.webkit.org/show_bug.cgi?id=203265
+        <rdar://problem/55570995>
+
+        Reviewed by Per Arne Vollan.
+
+        * WebProcess/com.apple.WebProcess.sb.in:
+
 2019-10-22  Tim Horton  <timothy_horton@apple.com>
 
         Update xcfilelists
